# live-bootcamp-project

./: .gitignore  clean-cargo.sh  compose.yml  install-build.sh
.github/workflows/: prod.yml
app-service/: .dockerignore  Dockerfile
auth-service/: Cargo.toml  Dockerfile  README.md  test-localhost.py
auth-service/src/: lib.rs  main.rs
auth-service/src/routes/: signup.rs
auth-service/tests/api/: helpers.rs  main.rs  root.rs  routes.rs  verify_2fa.rs  verify_logout.rs  verify_signup.rs  verify_token.rs
