[package]
name = "auth-service"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.9"
tokio = { version = "1.47", features = ["full"] }
tower-http = { version = "0.5.2", features = ["fs"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.18.1", features = ["v4", "serde"] }

[dev-dependencies]
reqwest = { version = "0.11.27", default-features = false, features = ["json"] }
